# rdoc_fmri_quality_control

./: README.md  pyproject.toml  requirements.txt  setup_env.sh
batch/: run_fmriprep_s43.sbatch  run_mriqc.sbatch  run_tedana_qc.sbatch
config/: bids_filter_s43_prelim.json  config.example.yaml
scripts/: check_t1w_mni_coreg.py  run_flywheel_qc.py  run_single_scan_qc.py
src/rdoc_fmri_quality_control/: temporal_sd.py
